# subwasm

cli/: Cargo.toml
lib/: Cargo.toml
libs/ipfs-hasher/: Cargo.toml
libs/substrate-differ/: Cargo.toml
libs/substrate-runtime-proposal-hash/: Cargo.toml
libs/wasm-loader/: Cargo.toml
libs/wasm-testbed/: Cargo.toml
