[package]
authors = ["chevdor <chevdor@gmail.com>", "Wilfried Kopp <wilfried@parity.io"]
description = "subwasm is a utility that works on WASM Runtime of Substrate based chains"
edition = "2018"
homepage = "https://github.com/chevdor/subwasm"
keywords = ["wasm", "substrate", "runtime", "polkadot", "kusama"]
license = "MIT"
name = "subwasm"
readme = "README.md"
repository = "https://github.com/chevdor/subwasm"
version = "0.13.2"

[package.metadata.deb]
assets = [
  ["target/release/subwasm", "usr/bin/", "755"],
]
copyright = "2021, Wilfried Kopp aka. Chevdor <chevdor@gmail.com>"
depends = "$auto"
extended-description = """\
A cli utility to work with Substrate WASM Runtime."""
license-file = ["LICENSE", "0"]
maintainer = "Wilfried Kopp aka. Chevdor <chevdor@gmail.com>"
priority = "optional"
section = "utility"

[dependencies]
assert_cmd = "1.0"
clap = "3.0.0-beta.2"
color-eyre = "0.5"
env_logger = "0.9"
log = "0.4"
substrate-runtime-proposal-hash = {version = "0.13.0", path = "../libs/substrate-runtime-proposal-hash", optional = true}
subwasmlib = {version = "0.13.2", path = "../lib"}
wasm-loader = {version = "0.13.0", path = "../libs/wasm-loader"}
wasm-testbed = {version = "0.13.1", path = "../libs/wasm-testbed"}
