[package]
authors = ["chevdor <chevdor@gmail.com>"]
edition = "2018"
homepage = "https://github.com/chevdor/subwasm"
keywords = ["wasm", "substrate", "runtime", "polkadot", "kusama"]
name = "subwasmlib"
readme = "README.md"
repository = "https://github.com/chevdor/subwasm"
version = "0.13.2"
description = "a small lib used by the subwasm cli"
license = "MIT"

[dependencies]
calm_io = "0.1"
color-eyre = "0.5"
frame-metadata = {version = "14.0.0-rc.1", features = ["v12", "v13", "v14", "std"]}
ipfs-hasher = {version = "0.13.0", path = "../libs/ipfs-hasher"}
log = "0.4"
num-format = "0.4"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
substrate-differ = {version = "0.13.0", path = "../libs/substrate-differ"}
wasm-loader = {version = "0.13.0", path = "../libs/wasm-loader"}
wasm-testbed = {version = "0.13.1", path = "../libs/wasm-testbed"}

